--- a/index.html
+++ b/index.html
@@ -1,23 +1,57 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>Академия HTML</title>
-    <link rel="stylesheet" href="css/style.css">
-  </head>
-  <body>
 
-    <main>
-      <a href="https://htmlacademy.ru">
-        <img src="img/bane.svg" width="300" height="300" alt="HTML Academy">
-      </a>
+<head>
+  <meta charset="utf-8">
+  <title>What is she dreaming about?</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
 
-      <h1>Академия HTML</h1>
+<body>
 
-      <p>
-        <a href="https://github.com/htmlacademy/htmlacademy.github.io">github.com/htmlacademy/htmlacademy.github.io</a>
-      </p>
-    </main>
+  <main>
+    <a href="https://guinmoon.github.io">
+      <img class="img_main" src="img/2022-12-20_09_27_58.jpg" alt="Guinmoon">
+    </a>
+    <a href="https://guinmoon.github.io">
+      <img class="img_main" src="img/2022-12-21_07_10_11.jpg" alt="Guinmoon">
+    </a>
+    <a href="https://guinmoon.github.io">
+      <img class="img_main" src="img/res (1).png" alt="Guinmoon">
+    </a>
+    <a href="https://guinmoon.github.io">
+      <img class="img_main" src="img/2022-12-20_06_41_23.jpg" alt="Guinmoon">
+    </a>
 
-  </body>
+    <a href="https://guinmoon.github.io">
+      <img class="img_main" src="img/IMG_2633.jpeg" alt="Guinmoon">
+    </a>
+    <a href="https://guinmoon.github.io">
+      <img class="img_main" src="img/2022-12-21_08_39_41.jpg" alt="Guinmoon">
+    </a>
+
+    <a href="https://guinmoon.github.io">
+      <img class="img_main" src="img/2022-12-21_10_59_19.jpg" alt="Guinmoon">
+    </a>
+
+
+    <a href="https://guinmoon.github.io">
+      <img class="img_main" src="img/2022-12-21_16_26_33.jpg" alt="Guinmoon">
+    </a>
+
+    <a href="https://guinmoon.github.io">
+      <img class="img_main" src="img/Long time no see! How are you.. Long time no see! Where had you been.jpeg"
+        alt="Guinmoon">
+    </a>
+
+
+    <h1>What is she dreaming about?</h1>
+
+    <p>
+      <a href="https://github.com/guinmoon/guinmoon.github.io">guinmoon.github.io</a>
+    </p>
+  </main>
+
+</body>
+
 </html>
