--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
 
   <main>
+    <h1 class="h1_dream">What is she dreaming about?</h1>
+
     <a href="https://guinmoon.github.io">
       <img class="img_main" src="img/2022-12-20_09_27_58.jpg" alt="Guinmoon">
     </a>
@@ -45,7 +47,6 @@
     </a>
 
 
-    <h1>What is she dreaming about?</h1>
 
     <p>
       <a href="https://github.com/guinmoon/guinmoon.github.io">guinmoon.github.io</a>
