--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 
 <head>
   <meta charset="utf-8">
-  <title>What is she dreaming about?</title>
+  <title>What's AI dreaming?</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
 
   <main>
-    <h1 class="h1_dream">What is she dreaming about?</h1>
+    <h1 class="h1_dream">What's AI dreaming?</h1>
 
     <a href="https://guinmoon.github.io">
       <img class="img_main" src="img/2022-12-20_09_27_58.jpg" alt="Guinmoon">
